# AccountaBud

./: .env.example  .gitignore  README.md  canvas.py  gemini.py  main.py  pyproject.toml  requirements.txt
call/: bridge.py  call.py  gemini.py
extension/: background.js  manifest.json  popup.css  popup.html  popup.js
frontend/: .gitignore  bun.lockb  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/text-to-speech/: route.ts
frontend/src/app/api/transcribe-audio/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/mock/: page.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  FallingText.tsx  Navbar.tsx  TranscriptionButton.tsx
frontend/src/components/Orb/: Orb.tsx
frontend/src/components/ScrollFloat/: ScrollFloat.tsx
frontend/src/components/Threads/: Threads.tsx
frontend/src/components/dashboard/: GoalProgress.tsx  JournalInsight.tsx  MoodTracker.tsx  QuickChat.tsx  UpcomingReminders.tsx
frontend/src/components/magicui/: line-shadow-text.tsx
frontend/src/components/ui/: scroll-area.tsx  smooth-cursor.tsx
frontend/src/contexts/: UIModeContext.tsx
frontend/src/server/: actions.ts
templates/: streams.xml
tools/: canvas.py  melissa.py
