[project]
name = "la-hacks-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.12",
    "google-genai>=1.12.1",
    "jinja2>=3.1.6",
    "ngrok>=1.4.0",
    "pendulum>=3.1.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.3",
    "pymongo>=4.12.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "twilio>=9.5.2",
    "websockets>=15.0.1",
]
