[project]
name = "la-hacks-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "langchain>=0.3.24",
    "ngrok>=1.4.0",
    "pendulum>=3.1.0",
    "pipecat-ai[google,silero]>=0.0.65",
    "pyaudio>=0.2.14",
    "pydantic>=2.10.6",
    "pymongo>=4.12.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "twilio>=9.5.2",
]
